posix_bragi = cxxbragi.process(protos/'posix/posix.bragi')

src = [
	'src/clock.cpp',
	'src/device.cpp',
	'src/devices/full.cpp',
	'src/devices/helout.cpp',
	'src/devices/null.cpp',
	'src/devices/random.cpp',
	'src/devices/urandom.cpp',
	'src/devices/zero.cpp',
	'src/drvcore.cpp',
	'src/epoll.cpp',
	'src/eventfd.cpp',
	'src/exec.cpp',
	'src/extern_fs.cpp',
	'src/extern_socket.cpp',
	'src/fifo.cpp',
	'src/file.cpp',
	'src/fs.cpp',
	'src/gdbserver.cpp',
	'src/inotify.cpp',
	'src/main.cpp',
	'src/memfd.cpp',
	'src/net.cpp',
	'src/nl-socket.cpp',
	'src/observations.cpp',
	'src/process.cpp',
	'src/procfs.cpp',
	'src/pts.cpp',
	'src/requests.cpp',
	'src/signalfd.cpp',
	'src/subsystem/block.cpp',
	'src/subsystem/drm.cpp',
	'src/subsystem/generic.cpp',
	'src/subsystem/input.cpp',
	'src/subsystem/pci.cpp',
	'src/sysfs.cpp',
	'src/timerfd.cpp',
	'src/tmp_fs.cpp',
	'src/un-socket.cpp',
	'src/util.cpp',
	'src/vfs.cpp',
	posix_bragi
]

executable('posix-subsystem', src,
	dependencies : [ mbus_proto_dep, fs_proto_dep, posix_extra_dep, clock_proto_dep, kerncfg_proto_dep, frigg ],
	install : true
)
